client/css/reports-manager.css
/* ... */
			#stage-define-report #save-container #save-more i {
				margin: 0;
			}
		#stage-define-report #save-container #save-menu {
			position: absolute;
			top: 100%;
			right: 0;
			z-index: 5;
			background: var(--color-surface);
			color: var(--color-surface-text);
		}
		.dialog-box .fork-report {
			padding: 10px;
		}
			.dialog-box .fork-report h2 {
				margin: 0;
				font-size: 120%;
			}
			.dialog-box .fork-report .separator {
				margin: 0;
				border-top: 1px dashed var(--color-border);
				padding-top: 20px;
			}
			.dialog-box .fork-report .filters,
			.dialog-box .fork-report .visualizations {
				max-width: 100%;
			}
			.dialog-box .fork-report .switch-to-new {
				display: grid;
				grid-template-columns: max-content max-content;
				grid-gap: var(--gap);
				align-items: center;
			}
			.dialog-box .fork-report .form .footer {
				display: grid;
				grid-template-columns: 1fr max-content max-content;
				grid-gap: calc(var(--gap) * 2);
				align-items: flex-end;
			}
				.dialog-box .fork-report .footer .progress {
					display: grid;
					grid-gap: var(--gap);
				}
					.dialog-box .fork-report .footer .progress span em {
						font-weight: bold;
					}
					.dialog-box .fork-report .footer .progress progress {
						width: 100%;
						height: var(--gap);
					}
				.dialog-box .fork-report .footer button {
					height: auto;
					padding: 8px 18px;
					font-size: 100%;
				}
				.dialog-box .fork-report .footer button[type=submit] {
					grid-column: 3;
				}
				.dialog-box .fork-report .footer .export {
					grid-column: 2;
				}
					.dialog-box .fork-report i:last-child {
						margin: 0 0 0 var(--gap);
					}

	#stage-define-report #api {
		grid-column: 1 / 3;
		display: grid;
		grid-row-gap: calc(var(--gap) * 2);
		padding: calc(var(--gap) * 2);
		border: 1px solid #ccc;
		background: #fff;
	}
		#stage-define-report #api label {
			max-width: initial;
		}

	#define-report-parts {
		display: flex;
		height: 100%;
	}
		#stage-define-report .not-saved {
			background: var(--color-red);
			color: #fff;
		}
		#stage-define-report #schema {
			overflow: auto;
			font-weight: normal;
			height: 100%;
			position: relative;
			display: flex;
			order: 1;
			flex: 1 300px;
			max-width: 300px;
			flex-direction: column;
			background: var(--color-surface);
			color: var(--color-surface-text);
			box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
			margin-right: calc(var(--gap) * 2);
		}
			#stage-define-report #schema .NA {
				text-align: center;
				padding: var(--gap);
			}
			#stage-define-report #schema input[type=search] {
				width: 100%;
				border: 0;
				border-bottom: 1px solid var(--color-border);
				position: sticky;
				top: 0;
				z-index: 2;
			}
			#stage-define-report #schema ul {
				padding: 0;
				list-style: none;
				margin: 0;
			}
			#stage-define-report #schema ul ul {
				border-left: 1px dashed #999;
				padding-left: 10px;
				margin-left: 10px;
			}
				#stage-define-report #schema li {
					white-space: nowrap;
					position: relative
				}
				#stage-define-report #schema li:before {
					content: '–';
					position:absolute;
					color: #999;
					top: 5px;
					left: -10px;
				}
					#stage-define-report #schema li .name {
						display: grid;
						padding: 8px;
						grid-template-columns: max-content auto max-content;
						grid-gap: var(--gap);
						max-width: 100%;
						overflow: hidden;
						transition: background var(--transition-duration),
									box-shadow var(--transition-duration);
					}
					#stage-define-report #schema li .name:hover {
						background: rgba(0, 0, 0, 0.10);
					}
					#stage-define-report #schema li .name:active {
						box-shadow: inset 0 0 25px rgba(0, 0, 0, 0.4);
					}
					#stage-define-report #schema li.opened > .name {
						background: var(--color-selected);
						position: sticky;
						color: var(--color-selected-text);
						top: 28px;
						z-index: 1;
					}
						#stage-define-report #schema li .name span {
							overflow: hidden;
							text-overflow: ellipsis;
						}
						#stage-define-report #schema li .name small {
							margin-left: auto;
							color: var(--color-grey);
						}

		#stage-define-report button[type=submit].not-saved {
			background: var(--color-red);
		}
		#stage-define-report #define-report-form {
			order: 2;
			flex: 1 60%;
			box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
			height: 100%;
			grid-template-rows: max-content max-content max-content max-content max-content max-content;
		}
			#stage-define-report #define-report-form .ace_editor {
				height: 100%;
			}
			#stage-define-report #define-report-form.form .mongo-query {
				max-width: 100%;
			    grid-template-rows: max-content 1fr;
			}
			#stage-define-report #define-report-form .parameters {
				display: grid;
				grid-gap: calc(var(--gap) * 2);
			}
				#stage-define-report #define-report-form .headings {
					display: grid;
					grid-template-columns: 200px 200px;
					grid-gap: calc(var(--gap) * 2);
					text-align: center;
					color: var(--color-grey);
				}
				#stage-define-report #define-report-form .list {
					display: grid;
					grid-gap: calc(var(--gap) * 2);
				}
					#stage-define-report #define-report-form .list i {
						margin-left: 5px;
					}
					#stage-define-report #define-report-form .list > label {
						display: grid;
						grid-template-columns: 200px 200px 50px;
						grid-gap: calc(var(--gap) * 2);
					}
			#stage-define-report #define-report-form .add-headers,
			#stage-define-report #define-report-form .add-parameter {
				display: grid;
				grid-gap: calc(var(--gap) * 2);
			}
				#stage-define-report #define-report-form .add-params-form,
				#stage-define-report #define-report-form .add-headers-form {
					display: grid;
					grid-template-columns: 200px 200px 50px;
					grid-gap: calc(var(--gap) * 2);
				}
/* ... */

